refactor: added meta description to html pages.

--- a/rsrcs/io_inputs/app/config/web_pages/01/home.html
+++ b/rsrcs/io_inputs/app/config/web_pages/01/home.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Page meta description for indexers, like Google. This is the page description what appears when searching with Google. -->
+        <meta name="description" content="Portfolio of exercises using PyScipt, for Python implementation in web-browsers." />
         <!-- Window title. -->
         <title>PyScript Exercises</title>
         <!-- Window logo. Goes up x5 folder levels to get to 'media' ([CURRENT DIR.] < web_pages < config < app < io_inputs < rsrcs > media), where it's stored. -->
@@ -65,6 +67,7 @@
                 <p>This is a list of exercises to study <code>PyScript</code>. These exercises come from the <b><a href="https://docs.pyscript.net/2024.5.2/examples/" target="_blank">official PyScript documentation</a></b>, where several examples are listed, starting with basics such as '<a href="https://pyscript.com/@examples/hello-world/latest" target="_blank">Hello World</a>', and digging into <a href="https://pyscript.com/@examples/altair/latest" target="_blank">plotting data</a>.</p>
                 <br>
                 <div class="main-content-tiles">
+                    <!-- 'articles' are meant to be pieces of content that can be re-usable and independent (e.g. a tweet, or highlighted comment on YouTube). 'article' DOES NOT IMPLIES IT'S EXCLUSIVELY A TEXT'S ARTICLE. -->
                     <article>
                         <div class="main-content-tiles-logo_title_pair">
                             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-file-code"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><path d="M10 13l-1 2l1 2" /><path d="M14 13l1 2l-1 2" /></svg>
