--- a/rsrcs/io_inputs/app/config/web_pages/02/hello_world.html
+++ b/rsrcs/io_inputs/app/config/web_pages/02/hello_world.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Page meta description for indexers, like Google. This is the page description what appears when searching with Google. -->
+        <meta name="description" content="'Hello World' exercise implementation, for portfolio of exercises using PyScipt, for Python implementation in web-browsers." />
         <!-- Window title. -->
         <title>Hello World | PyScript Exercises</title>
         <!-- Window logo. Goes up x5 folder levels to get to 'media' ([CURRENT DIR.] < web_pages < config < app < io_inputs < rsrcs > media), where it's stored. -->
